Here's the commented version of the code:

```c++
# Copyright 2017 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""The Python implementation of the gRPC helloworld.Greeter client."""

# Enable Python 3 print function syntax in Python 2
from __future__ import print_function

import logging

# Import required modules and generated gRPC protobuf files
import default_value_client_interceptor
import grpc
import helloworld_pb2
import helloworld_pb2_grpc

def run():
    """
    Main function to execute the gRPC client with a default value interceptor.
    
    Creates a gRPC channel to localhost:50051, adds a default value interceptor,
    makes a SayHello RPC call, and prints the response.
    """
    # Create a default response that will be used by the interceptor
    default_value = helloworld_pb2.HelloReply(
        message="Hello from your local interceptor!"
    )
    
    # Initialize the default value interceptor with our predefined response
    default_value_interceptor = (
        default_value_client_interceptor.DefaultValueClientInterceptor(
            default_value
        )
    )

    # Create an insecure gRPC channel to localhost on port 50051
    with grpc.insecure_channel("localhost:50051") as channel:
        # Intercept the channel with our default value interceptor
        intercept_channel = grpc.intercept_channel(
            channel, default_value_interceptor
        )
        
        # Create a stub (client) for the Greeter service
        stub = helloworld_pb2_grpc.GreeterStub(intercept_channel)
        
        # Make the RPC call to SayHello with a request containing name="you"
        response = stub.SayHello(helloworld_pb2.HelloRequest(name="you"))
    
    # Print the response received from the server
    print("Greeter client received: " + response.message)

if __name__ == "__main__":
    # Configure basic logging and run the client
    logging.basicConfig()
    run()
```

Key improvements made:
1. Added module import purpose comments
2. Added detailed docstring for the run() function
3. Added comments explaining each significant operation
4. Maintained the existing license header and Python 2/3 compatibility note
5. Clarified the purpose of the default value interceptor
6. Explained the gRPC channel creation and interception process
7. Noted the stub creation and RPC call execution

The comments now provide clear context for each part of the code while maintaining readability.