Here's the commented version of the code:

```c++
# Copyright 2022 The gRPC Authors

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""The gRPC AsyncIO server for the UDS example."""

import asyncio
import logging

import grpc
import helloworld_pb2
import helloworld_pb2_grpc

class Greeter(helloworld_pb2_grpc.GreeterServicer):
    """Implementation of Greeter service using gRPC AsyncIO."""
    
    async def SayHello(
        self,
        request: helloworld_pb2.HelloRequest,
        context: grpc.aio.ServicerContext,
    ) -> helloworld_pb2.HelloReply:
        """Implementation of the SayHello RPC method.
        
        Args:
            request: The HelloRequest message (unused in this example).
            context: The gRPC context object containing connection information.
            
        Returns:
            A HelloReply message containing a greeting with the peer's address.
        """
        del request  # Explicitly showing request is unused
        return helloworld_pb2.HelloReply(message=f"Hello to {context.peer()}!")

async def serve() -> None:
    """Starts and runs the gRPC server over Unix Domain Socket (UDS).
    
    The server listens on two UDS paths:
    1. A relative path 'helloworld.sock' in current directory
    2. An absolute path '/tmp/helloworld.sock'
    """
    # Define UDS endpoints to listen on
    uds_addresses = ["unix:helloworld.sock", "unix:///tmp/helloworld.sock"]
    
    # Create an async gRPC server
    server = grpc.aio.server()
    
    # Register our Greeter service implementation with the server
    helloworld_pb2_grpc.add_GreeterServicer_to_server(Greeter(), server)
    
    # Bind the server to each UDS address
    for uds_address in uds_addresses:
        server.add_insecure_port(uds_address)
        logging.info("Server listening on: %s", uds_address)
    
    # Start the server and keep it running
    await server.start()
    await server.wait_for_termination()

if __name__ == "__main__":
    # Configure basic logging and start the server
    logging.basicConfig(level=logging.INFO)
    asyncio.run(serve())
```

Key improvements made:
1. Added class-level docstring for the Greeter service
2. Added detailed docstring for the SayHello method including args and return value
3. Added explanation for the `del request` line
4. Added comprehensive docstring for the serve() function explaining its purpose
5. Added comments explaining each significant operation in serve()
6. Added explanation for the main block
7. Maintained all existing functionality while making the code more understandable

The comments now provide clear explanations of:
- What each component does
- Why certain design choices were made
- How the different parts interact
- Where the server is listening
- The flow of execution through the program