Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

// Include necessary headers
#include <grpcpp/generic/generic_stub.h>  // For generic gRPC stub
#include <grpcpp/grpcpp.h>  // Core gRPC C++ functionality

// Standard library includes
#include <condition_variable>  // For thread synchronization
#include <iostream>           // For console I/O
#include <memory>             // For smart pointers
#include <mutex>              // For mutex locks
#include <string>             // For string operations

// Abseil library includes
#include "absl/flags/flag.h"     // For command line flags
#include "absl/flags/parse.h"    // For parsing command line flags
#include "absl/log/initialize.h" // For log initialization
#include "absl/strings/str_format.h" // For string formatting

// Include generated protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"  // Bazel build path
#else
#include "helloworld.grpc.pb.h"  // Standard build path
#endif

// Define a command line flag for server address with default value
ABSL_FLAG(std::string, target, "localhost:50051", "Server address");

// Using declarations to simplify code
using grpc::Channel;
using grpc::ClientContext;
using grpc::Status;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

// Define a type alias for generic protobuf stub
using ProtoGenericStub =
    ::grpc::TemplatedGenericStub<::google::protobuf::Message,
                                 ::google::protobuf::Message>;

// GreeterClient class for interacting with the gRPC server
class GreeterClient {
 public:
  // Constructor that takes a shared channel
  GreeterClient(std::shared_ptr<Channel> channel)
      : stub_(new ProtoGenericStub(channel)) {}

  // Method to send a greeting to the server
  void SayHello(const std::string& user) {
    // Create request and set the name
    HelloRequest request;
    request.set_name(user);

    // Response will be stored here
    HelloReply reply;

    // Context for the client call
    ClientContext context;

    // Synchronization primitives for async call
    std::mutex mu;
    std::condition_variable cv;
    bool done = false;
    Status status;

    // Log the outgoing request
    std::cout << absl::StrFormat("### Send: SayHello(name=%s)", user)
              << std::endl;

    // Make asynchronous unary call to the server
    stub_->UnaryCall(&context, "/helloworld.Greeter/SayHello",
                     grpc::StubOptions(), &request, &reply, [&](Status s) {
                       // Callback function when response is received
                       status = std::move(s);
                       std::lock_guard<std::mutex> lock(mu);
                       done = true;
                       cv.notify_one();  // Notify waiting thread
                     });

    // Wait for the async call to complete
    std::unique_lock<std::mutex> lock(mu);
    while (!done) {
      cv.wait(lock);
    }

    // Process and display the response
    if (status.ok()) {
      std::cout << absl::StrFormat("Ok. ReplyMessage=%s", reply.message())
                << std::endl;
    } else {
      std::cout << absl::StrFormat("Failed. Code=%d Message=%s",
                                   status.error_code(), status.error_message())
                << std::endl;
    }
  }

 private:
  // Unique pointer to the generic stub
  std::unique_ptr<ProtoGenericStub> stub_;
};

// Main function
int main(int argc, char** argv) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();

  // Get server address from command line flag
  std::string target_str = absl::GetFlag(FLAGS_target);

  // Create client with insecure channel credentials
  GreeterClient greeter(
      grpc::CreateChannel(target_str, grpc::InsecureChannelCredentials()));
  
  // Make two sample calls to the server
  greeter.SayHello("World");
  greeter.SayHello("gRPC");
  
  return 0;
}
```

The comments explain:
1. Header includes and their purposes
2. Command line flag definition
3. Type aliases and their significance
4. Class structure and member variables
5. Method functionality and flow
6. Asynchronous call mechanics and synchronization
7. Response handling
8. Main program flow and initialization

The comments are designed to help future developers understand:
- The overall architecture
- Key components and their roles
- The asynchronous call pattern used
- Error handling approach
- The flow of data through the system