Here's the commented version of the code:

```c++
# Copyright 2023 gRPC authors.

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

#     http://www.apache.org/licenses/LICENSE-2.0

# distributed under the License is distributed on an "AS IS" BASIS,

# See the License for the specific language governing permissions and
# limitations under the License.
"""gRPC Python helloworld.Greeter client with call timeout parameters."""

import logging

import grpc
import helloworld_pb2
import helloworld_pb2_grpc

def unary_call(
    stub: helloworld_pb2_grpc.GreeterStub, request_id: int, message: str
):
    """Makes a unary RPC call to the Greeter service.
    
    Args:
        stub: The gRPC stub for the Greeter service.
        request_id: Unique identifier for the request (for logging purposes).
        message: The message to send to the server.
    """
    print("call:", request_id)
    try:
        # Make a SayHello RPC call with a 3-second timeout
        response = stub.SayHello(
            helloworld_pb2.HelloRequest(name=message), timeout=3
        )
        print(f"Greeter client received: {response.message}")
    except grpc.RpcError as rpc_error:
        # Handle any RPC errors that occur during the call
        print(f"Call failed with code: {rpc_error.code()}")

def run():
    """Main function to run the gRPC client."""
    # Create an insecure channel to localhost on port 50051
    with grpc.insecure_channel("localhost:50051") as channel:
        # Create the Greeter service stub
        stub = helloworld_pb2_grpc.GreeterStub(channel)

        # Make two unary calls to the server:
        # 1. A normal call
        unary_call(stub, 1, "you")
        # 2. A call that might be delayed (as indicated by the message prefix)
        unary_call(stub, 2, "[delay] you")

if __name__ == "__main__":
    # Configure basic logging and run the client
    logging.basicConfig()
    run()
```

Key improvements made:
1. Added docstring for the `unary_call` function explaining its purpose and parameters
2. Added comments explaining the RPC call and error handling
3. Added docstring for the `run` function
4. Added comments explaining the channel creation and stub initialization
5. Added comments explaining the two different test calls being made
6. Added comment for the main execution block

The comments now provide clear context about:
- What each function does
- The purpose of key operations
- The expected behavior
- The structure of the client execution flow