Here's the commented version of the code:

```c++
// Copyright 2023 gRPC authors.

// Include necessary headers
#include <grpcpp/grpcpp.h>  // Main gRPC C++ library

#include <condition_variable>  // For thread synchronization
#include <iostream>            // For console output
#include <memory>              // For smart pointers
#include <mutex>               // For mutex locks
#include <string>              // For string handling
#include <vector>              // For vector container

// Include Abseil libraries for flags and logging
#include "absl/flags/flag.h"
#include "absl/flags/parse.h"
#include "absl/log/initialize.h"
#include "absl/strings/str_cat.h"

// Include the generated gRPC protobuf headers
#ifdef BAZEL_BUILD
#include "examples/protos/helloworld.grpc.pb.h"  // For Bazel build system
#else
#include "helloworld.grpc.pb.h"                 // For standard build system
#endif

// Define a command line flag for server address with default value
ABSL_FLAG(std::string, target, "localhost:50051", "Server address");

// Using declarations to simplify code
using grpc::Channel;
using grpc::ClientContext;
using grpc::Status;
using grpc::StatusCode;
using helloworld::Greeter;
using helloworld::HelloReply;
using helloworld::HelloRequest;

/// @brief Makes an asynchronous unary RPC call to the Greeter service
/// @param channel Shared pointer to the gRPC channel
/// @param label Identifier for this call in output messages
/// @param message The message to send in the request
/// @param expected_code The expected status code for this call
void unaryCall(std::shared_ptr<Channel> channel, std::string label,
               std::string message, grpc::StatusCode expected_code) {
  // Create a stub for the Greeter service
  std::unique_ptr<Greeter::Stub> stub = Greeter::NewStub(channel);

  // Prepare the request with the given message
  HelloRequest request;
  request.set_name(message);

  // Will store the server's response
  HelloReply reply;

  // Create a context for the RPC
  ClientContext context;

  // Set a deadline of 1 second for the RPC
  context.set_deadline(std::chrono::system_clock::now() +
                       std::chrono::seconds(1));

  // Synchronization primitives for the async call
  std::mutex mu;
  std::condition_variable cv;
  bool done = false;
  Status status;

  // Make the asynchronous call
  stub->async()->SayHello(&context, &request, &reply,
                          [&mu, &cv, &done, &status](Status s) {
                            // Callback that runs when RPC completes
                            status = std::move(s);
                            std::lock_guard<std::mutex> lock(mu);
                            done = true;
                            cv.notify_one();  // Notify waiting thread
                          });

  // Wait for the async call to complete
  std::unique_lock<std::mutex> lock(mu);
  while (!done) {
    cv.wait(lock);
  }

  // Print the result of the call
  std::cout << "[" << label << "] wanted = " << expected_code
            << ", got = " << status.error_code() << std::endl;
}

/// @brief Main function that demonstrates different RPC scenarios
/// @param argc Argument count
/// @param argv Argument values
/// @return Exit status
int main(int argc, char** argv) {
  // Initialize command line parsing and logging
  absl::ParseCommandLine(argc, argv);
  absl::InitializeLog();

  // Get server address from command line flag
  std::string target_str = absl::GetFlag(FLAGS_target);

  // Create an insecure channel to the server
  std::shared_ptr<Channel> channel =
      grpc::CreateChannel(target_str, grpc::InsecureChannelCredentials());

  // Make various test calls with different scenarios:
  // 1. Successful normal request
  unaryCall(channel, "Successful request", "world", grpc::StatusCode::OK);
  // 2. Request that will exceed deadline
  unaryCall(channel, "Exceeds deadline", "delay",
            grpc::StatusCode::DEADLINE_EXCEEDED);
  // 3. Successful request with special propagation marker
  unaryCall(channel, "Successful request with propagated deadline",
            "[propagate me]world", grpc::StatusCode::OK);
  // 4. Request that will exceed propagated deadline
  unaryCall(channel, "Exceeds propagated deadline",
            "[propagate me][propagate me]world",
            grpc::StatusCode::DEADLINE_EXCEEDED);
  
  return 0;
}
```

Key improvements in the comments:
1. Added header file purpose comments
2. Documented the unaryCall function parameters and purpose
3. Explained the asynchronous callback mechanism
4. Added clear section comments in main() for the different test cases
5. Added documentation blocks for both functions
6. Explained the synchronization primitives usage
7. Clarified the expected behavior for each test case

The comments now provide a comprehensive understanding of the code's functionality while maintaining readability.